Stacked bar chart (#9)
* Added toggling on and off of certain price ranges

* Made it so there has to be at least one price range

* Added tooltip

* added outline to legend when hovered

* Line-through unselected keys

* Fix tooltip

* Fixed tooltip initial visibility

* Fixed selections

* Added text

---------

Co-authored-by: khbed <97263154+khbed@users.noreply.github.com>

--- a/styles.css
+++ b/styles.css
@@ -31,3 +31,17 @@ body {
     flex: 1;
     padding: 20px;
 }
+
+.tooltip {
+    position: absolute;
+    text-align: center;
+    width: auto;
+    height: auto;
+    padding: 8px;
+    font: 12px sans-serif;
+    background: rgba(0, 0, 0, 0.8);
+    border: 0;
+    border-radius: 4px;
+    pointer-events: none;
+    color: white;
+  }
