--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,19 @@ body {
   flex: 1;
   padding: 20px;
 }
+#svg-container-ventes {
+  position: relative;
+  overflow: visible; /* Allow overflow */
+}
+
+#content-ventes {
+  overflow: visible; /* Allow overflow */
+}
+
+.legend-container-ventes {
+  position: absolute;
+  margin-left: 55%;
+}
 
 .tooltip {
   position: absolute;
@@ -65,4 +78,12 @@ h1 {
 
 #controls {
   margin-top: -100px;
+}
+#controls {
+  margin-top: -100px;
+}
+
+#controlsVentes {
+  margin-top: 3.25%;
+  margin-right: 20%;
 }
